# I-OSM-Project-19-20-S1-Groep4

./: .gitignore  Makefile.am  Makefile.in  OSM-Project-QT.files  OSM-Project-QT.includes  README  README.md  buildall.sh  configure  configure.ac  gmon.out
Config/: config.h.in  config.h.in~
Exe1/: Main.cpp  Makefile.am  Makefile.in
Exe2/: Main.cpp  Makefile.am  Makefile.in
Lib1/: Lib1.cpp  Makefile.am  Makefile.in
Lib2/: Lib2.cpp  Makefile.am  Makefile.in
RScripts/: Rscript2.R
TestExe1/: MachineBrokenTest.cpp  MachineBrokenTest.hpp  Main.cpp  Makefile.am  Makefile.in  Object_test.cpp
TestExe2/: Makefile.am  Makefile.in
diagrammen/: domeinmodel.txt
docs/: basisLayoutGUI.epgz  domeinmodel.txt  presentationForSprintReview1.odp
docs/MainScreen/ProductControlGUI/: ProductControlGUI.pro  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  resources.qrc
docs/StartScreen/StartScreen/: StartScreen.pro  main.cpp  startscreenwindow.cpp  startscreenwindow.hpp  startscreenwindow.ui
gui/: CMakeLists.txt  TODO GUI
gui/CMake/guibuild/: README.md  build.sh
gui/CMake/guibuild/gui/: CMakeLists.txt  ui_mainwindow.h
gui/Gui_Visualizer/: Gui_Visualizer.pro  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  resources.qrc
jsonbestanden/: machineconfiguration.json  systemconfiguration.json
jsonfiles/: machineconfiguration.json  systemconfiguration.json
jsonfiles/Luxe machine luxe product/: machineconfiguration.json
jsonfiles/basis machine basis product/: machineconfiguration.json
jsonfiles/basis machine luxe product/: machineconfiguration.json
jsonfiles/luxe machine basis product/: machineconfiguration.json
libraries/lib_logger/: Logger.cpp  Logger.hpp
libraries/lib_network/: ClientHandler.hpp  ClientSession.hpp  CommunicationService.cpp  CommunicationService.hpp  Config.hpp  Message.hpp  MessageHandler.hpp  RequestHandler.hpp  ResponseHandler.hpp  ServerMain.hpp  ServerSession.hpp  Session.hpp
linux/: .gitignore
machinecontrol/: Main.cpp  Makefile.am
mingw/: .gitignore
productioncontrol/: Config.hpp  Configuration.cpp  Configuration.hpp  Machine.cpp  Machine.hpp  Main.cpp  Makefile.am  ProductionControl.cpp  ProductionControl.hpp
